--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,15 @@
 STAR电控组招新考核
+
+## 运行方法
+
+### 方法一：双击运行（Windows）
+1. 下载本项目
+2. 双击 `run.bat` 文件
+
+### 方法二：命令行运行
+```bash
+# 进入项目文件夹
+cd STAR-
+
+# 运行主程序（请复制整行）
+python "范淏轩_医学检验技术2501_STAR电控招新二阶段.py"
