--- a/ReadMe
+++ b/ReadMe
@@ -1,15 +1,12 @@
 STAR电控组招新考核
 
-## 运行方法
+##  完整运行指南
 
-### 方法一：双击运行（Windows）
-1. 下载本项目
-2. 双击 `run.bat` 文件
+### 视觉任务：
+1. 进入视觉任务文件夹：`cd "视觉任务"`
+2. 运行图片处理：`python "STAR视觉图片.py"`
+3. 运行视频处理：`python "STAR视觉视频.py"`
 
-### 方法二：命令行运行
-```bash
-# 进入项目文件夹
-cd STAR-
-
-# 运行主程序（请复制整行）
-python "范淏轩_医学检验技术2501_STAR电控招新二阶段.py"
+###  Arduino任务：
+- 基础舵机：用Arduino IDE打开 `基础任务/Servo.ino`
+- 蓝牙舵机：用Arduino IDE打开 `嵌软任务/BlueTeethServo.ino`
